# pinocchio_ros_cpp_example

./: .env  Dockerfile  README.md  docker-compose.yaml
pinocchio_ros_example/: CMakeLists.txt  package.xml
pinocchio_ros_example/src/: pinocchio_example.cpp
pinocchio_ros_example/ur_robot_model/: ur5_gripper.urdf
